crates/tree-sitter-vixen/grammar.js
    document: ($) => optional($.statement_list),

    statement_list: ($) => seq($.statement, repeat(seq(";", $.statement)), optional(";")),

    function_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "fn",
        field("name", $.lower_identifier),
        optional(field("type_parameters", $.type_parameter_list)),
        field("parameters", $.parameter_clause),
        optional(field("return_type", $.return_type)),
        optional(field("body", $.block)),
      ),

    binding_statement: ($) =>
      seq(
        field("pattern", $.binding_pattern),
        optional(seq(":", field("type", $.type_expression))),
        "=",
        field("value", $.expression),
      ),

    parameter_clause: ($) => seq("(", optional(commaSep1($.parameter_item)), optional(","), ")"),

    parameter: ($) => seq(field("pattern", $.binding_pattern), ":", field("type", $.type_expression)),

    return_type: ($) => seq("->", $.type_expression),

    tuple_type: ($) =>
      seq("(", commaSep1($.type_expression), optional(","), ")"),

    type_path: ($) =>
      prec.left(
        seq(
          field("head", $.upper_identifier),
          repeat(seq(".", field("member", $.upper_identifier))),
          optional(field("type_arguments", $.type_arguments)),
        ),
      ),

    type_arguments: ($) => seq("[", optional(commaSep1($.type_expression)), optional(","), "]"),

    binding_pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.lower_identifier,
        $.tuple_pattern,
        $.struct_pattern,
        $.array_pattern,
        $.parenthesized_pattern,
      ),

    primary_expression: ($) =>
      choice(
        $.identifier_expression,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.string_literal,
        $.interpolated_string,
        $.array_expression,
        $.map_expression,
        $.tuple_expression,
        $.parenthesized_expression,
        $.block,
        $.import_expression,
        $.fail_expression,
        $.dollar_identifier,
      ),

    identifier_expression: ($) => choice($.lower_identifier, $.upper_identifier),

    integer_literal: ($) => /\d(?:[\d_]*\d)?/,

    float_literal: ($) => /\d(?:[\d_]*\d)?\.\d(?:[\d_]*\d)?/,

    boolean_literal: ($) => choice("true", "false"),

    string_literal: ($) =>
      seq(
        "\"",
        repeat(choice($.escape_sequence, alias(token.immediate(/[^"\\\n]+/), $.string_content))),
        "\"",
      ),

    interpolated_string: ($) =>
      seq(
        "`",
        repeat(
          choice(
            $.escape_sequence,
            alias(token.immediate(/[^`\\$]+/), $.string_content),
            alias(token.immediate(/\$/), $.string_content),
            $.string_interpolation,
          ),
        ),
        "`",
      ),

    string_interpolation: ($) => seq("${", $.expression, "}"),

    escape_sequence: ($) => token(/\\([\\`"nrt0]|u\{[0-9A-Fa-f]{1,6}\})/),

    tuple_expression: ($) =>
      seq("(", commaSep1(choice($.expression, $.spread_expression)), optional(","), ")"),

    block: ($) => seq("{", optional($.statement_list), "}"),

    array_expression: ($) =>
      seq("[", optional(commaSep1(choice($.expression, $.spread_expression))), optional(","), "]"),

    map_expression: ($) =>
      seq("%{", optional(commaSep1($.map_entry)), optional(","), "}"),

    map_entry: ($) => seq(field("key", $.expression), "=>", field("value", $.expression)),

    spread_expression: ($) => prec.right(20, seq("..", $.expression)),

    update_body: ($) => seq("{", optional(commaSep1($.update_field)), optional(","), "}"),

    update_field: ($) =>
      choice(
        seq(field("path", $.field_path), ":", field("value", $.expression)),
        seq(":", field("shorthand", $.field_path), "with", field("value", $.update_body)),
        seq("..", field("spread", $.expression)),
      ),

    field_path: ($) =>
      seq($.lower_identifier, repeat(seq(".", $.lower_identifier))),

    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $.expression),
          field("consequence", $.block),
          optional(field("alternative", $.else_clause)),
        ),
      ),

    else_clause: ($) => seq("else", choice($.if_expression, $.block)),

    import_expression: ($) => seq("import", "(", field("path", $.string_literal), ")"),

    fail_expression: ($) => prec.right(PREC.unary, seq("fail", $.expression)),

    equality_expression: ($) =>
      prec.left(PREC.equality, seq($.expression, choice("==", "!="), $.expression)),

    additive_expression: ($) =>
      prec.left(PREC.additive, seq($.expression, choice("+", "-"), $.expression)),

    with_expression: ($) =>
      prec.right(PREC.with, seq(field("value", $.expression), "with", field("changes", $.update_body))),

    lower_identifier: ($) => /[a-z_][A-Za-z0-9_]*/,

    upper_identifier: ($) => /[A-Z][A-Za-z0-9_]*/,
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
