crates/tree-sitter-vixen/test/corpus/expressions_more.txt
================================================================================
Record payload application
================================================================================

fn value(x: F64, y: F64) -> Point {
  Point { x, y: y }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (application_expression
          (primary_expression
            (identifier_expression
              (upper_identifier)))
          (record_expression
            (record_field
              (lower_identifier))
            (record_field
              (lower_identifier)
              (primary_expression
                (identifier_expression
                  (lower_identifier))))))))))

================================================================================
Record spread
================================================================================

fn value(defaults: Config) -> Config {
  Config { ..defaults, optimize: true }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (application_expression
          (primary_expression
            (identifier_expression
              (upper_identifier)))
          (record_expression
            (record_field
              (primary_expression
                (identifier_expression
                  (lower_identifier))))
            (record_field
              (lower_identifier)
              (primary_expression
                (boolean_literal)))))))))

================================================================================
Map payload application
================================================================================

fn value(lua_exe: Blob, liblua: Blob) -> Tree {
  Tree { @bin/lua: lua_exe, @lib/liblua.a: liblua }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (application_expression
          (primary_expression
            (identifier_expression
              (upper_identifier)))
          (map_expression
            (map_entry
              (map_key_expression
                (path_literal))
              (primary_expression
                (identifier_expression
                  (lower_identifier))))
            (map_entry
              (map_key_expression
                (path_literal))
              (primary_expression
                (identifier_expression
                  (lower_identifier))))))))))

================================================================================
With expression
================================================================================

fn value(name: Name) -> Name {
  name with { last: "Wilson" }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (with_expression
          (primary_expression
            (identifier_expression
              (lower_identifier)))
          (update_body
            (update_field
              (field_path
                (lower_identifier))
              (primary_expression
                (string_literal
                  (string_content))))))))))

================================================================================
Nested with shorthand
================================================================================

fn value(config: Config) -> Config {
  config with {
    :package with {
      name: "new",
    },
  }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (with_expression
          (primary_expression
            (identifier_expression
              (lower_identifier)))
          (update_body
            (update_field
              (field_path
                (lower_identifier))
              (update_body
                (update_field
                  (field_path
                    (lower_identifier))
                  (primary_expression
                    (string_literal
                      (string_content))))))))))))

================================================================================
Import expression
================================================================================

fn value() -> Module {
  import("build.vx")
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause)
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (primary_expression
          (import_expression
            (string_literal
              (string_content))))))))

================================================================================
Fail expression
================================================================================

fn value(message: String) -> String {
  fail message
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (primary_expression
          (fail_expression
            (primary_expression
              (identifier_expression
                (lower_identifier)))))))))

================================================================================
Block expression
================================================================================

fn value() -> U64 {
  {
    let x = 1;
    x + 1
  }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause)
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (primary_expression
          (block
            (statement_list
              (binding_statement
                (binding_pattern
                  (lower_identifier))
                (primary_expression
                  (integer_literal)))
              (additive_expression
                (primary_expression
                  (identifier_expression
                    (lower_identifier)))
                (primary_expression
                  (integer_literal))))))))))

================================================================================
If else expression
================================================================================

fn value(flag: Bool) -> String {
  if flag { "yes" } else { "no" }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (if_expression
          (primary_expression
            (identifier_expression
              (lower_identifier)))
          (block
            (statement_list
              (primary_expression
                (string_literal
                  (string_content)))))
          (else_clause
            (block
              (statement_list
                (primary_expression
                  (string_literal
                    (string_content)))))))))))

================================================================================
If else if chain
================================================================================

fn value(n: U64) -> String {
  if n == 0 { "zero" } else if n == 1 { "one" } else { "many" }
}

--------------------------------------------------------------------------------

(document
  (function_declaration
    (lower_identifier)
    (parameter_clause
      (parameter_list
        (parameter
          (binding_pattern
            (lower_identifier))
          (slot_type
            (type_primary
              (type_path
                (upper_identifier)))))))
    (return_type
      (type_primary
        (type_path
          (upper_identifier))))
    (block
      (statement_list
        (if_expression
          (equality_expression
            (primary_expression
              (identifier_expression
                (lower_identifier)))
            (primary_expression
              (integer_literal)))
          (block
            (statement_list
              (primary_expression
                (string_literal
                  (string_content)))))
          (else_clause
            (if_expression
              (equality_expression
                (primary_expression
                  (identifier_expression
                    (lower_identifier)))
                (primary_expression
                  (integer_literal)))
              (block
                (statement_list
                  (primary_expression
                    (string_literal
                      (string_content)))))
              (else_clause
                (block
                  (statement_list
                    (primary_expression
                      (string_literal
                        (string_content)))))))))))))
